RESOLVED FIXED275012
(REGRESSION 278380@main)Bad repaint when hovering over GitHub Reviewers gear icon
https://bugs.webkit.org/show_bug.cgi?id=275012
Summary (REGRESSION 278380@main)Bad repaint when hovering over GitHub Reviewers gear ...
alan
Reported 2024-05-31 21:12:08 PDT
Attachments
Patch (3.99 KB, patch)
2024-05-31 21:18 PDT, alan
no flags
Patch (4.00 KB, patch)
2024-06-01 06:04 PDT, alan
no flags
[fast-cq]Patch (6.03 KB, patch)
2024-06-01 09:16 PDT, alan
no flags
alan
Comment 1 2024-05-31 21:18:14 PDT
alan
Comment 2 2024-05-31 21:18:25 PDT
(needs test case)
alan
Comment 3 2024-06-01 06:04:59 PDT
alan
Comment 4 2024-06-01 09:16:06 PDT
Created attachment 471563 [details] [fast-cq]Patch
EWS
Comment 5 2024-06-03 05:13:45 PDT
Committed 279644@main (c55e92e3a3d4): <https://commits.webkit.org/279644@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471563 [details].
Note You need to log in before you can comment on or make changes to this bug.