(REGRESSION 278380@main)Bad repaint when hovering over GitHub Reviewers gear icon https://bugs.webkit.org/show_bug.cgi?id=275012 <rdar://129083266>

Reviewed by Antti Koivisto.

1. Let's make backdrop renderer part of the normal teardown flow so that we don't leak it on document teardown
2. "Destroy root" based repaint should take backdrop renderers into account

* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::destroyAndCleanUpAnonymousWrappers):
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::repaintAndMarkContainingBlockDirtyBeforeTearDown):
(WebCore::RenderTreeUpdater::tearDownRenderers):

Canonical link: https://commits.webkit.org/279644@main